# LinuxTPMKeyring

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  NOTES.md  PLAN.md  README.md  deny.toml
.github/workflows/: audit-nightly.yml  fuzz.yml  minimal-versions.yml  test.yml
crates/mug/: Cargo.toml
crates/mug/src/: align.rs  config.rs  detect.rs  error.rs  gate.rs  lib.rs  liveness.rs  matcher.rs  store.rs  sys.rs
crates/mug/src/camera/: hw.rs  mod.rs
crates/mug/tests/: lfw_validation.rs  virtual_substrate.rs  yunet_hw.rs
crates/tess-cli/: Cargo.toml
crates/tess-cli/src/: doctor.rs  face.rs  harden.rs  lib.rs  main.rs  pam_helper.rs  session.rs  tcti.rs
crates/tess-cli/src/enroll/: cli.rs  mod.rs  recovery.rs  sealer.rs
crates/tess-cli/src/install/: cli.rs  config.rs  mod.rs
crates/tess-cli/src/lifecycle/: cli.rs  mod.rs
crates/tess-cli/tests/: enroll_transaction.rs  face_unlock.rs  fprint_gate_session.rs  install_roundtrip.rs  lifecycle.rs  pam_helper_face.rs  pam_helper_session.rs  phase3_e2e.rs
crates/tess-cli/tests/common/: mod.rs
crates/tess-core/: Cargo.toml
crates/tess-core/src/: lib.rs
crates/tess-fprint/: Cargo.toml
crates/tess-fprint/src/: lib.rs
crates/tess-fprint/tests/: fprint_mock.rs
crates/tess-keyring/: Cargo.toml
crates/tess-keyring/src/: backend.rs  lib.rs
crates/tess-keyring/tests/: daemon.rs
crates/tess-keyring/tests/common/: mod.rs
crates/tess-pam/: Cargo.toml  build.rs
crates/tess-pam/src/: ffi.rs  gate.rs  helper.rs  lib.rs
crates/tess-pam/tests/: stall_injection.rs
crates/tess-testenv/: Cargo.toml
crates/tess-testenv/src/: env.rs  lib.rs
crates/tess-tpm/: Cargo.toml
crates/tess-tpm/src/: caps.rs  esapi.rs  lib.rs  lockout.rs  persist.rs  seal.rs
crates/tess-tpm/tests/: esapi_sim.rs  hw_device.rs  lockout_reset_sim.rs  persist_lockout_sim.rs
crates/tess-tpm/tests/common/: mod.rs
deploy/: install.sh
deploy/auditd/: tess.rules
deploy/azure/: deallocate.sh  hw-exit-test.sh  main.bicep  mvp-e2e-remote.sh  mvp-e2e.sh  provision.sh  reboot-persistence.sh  teardown.sh
deploy/debian/: postinst
deploy/pam/: README.md  tess-session.pam
deploy/qemu/: down.sh  up.sh
deploy/tests/: install-tpm-access.test.sh
deploy/udev/: 70-tess-tpm.rules
docs/: architecture.md  threat-model.md
docs/adr/: 0000-record-architecture-decisions.md  0001-tpm-seal-random-key-pin-authvalue-hmac-sessions.md  0002-scope-root-out-no-vbs.md  0003-userspace-tss-esapi-not-kernel-trusted-keys.md  0004-reject-ebpf-antitamper.md  0005-keyring-secret-service-backend-trait.md  0006-handrolled-pam-ffi-pinned-deps.md  0007-license-mit.md  0008-defer-privileged-da-lockout-reset.md  0009-recovery-secret-wrapping-scheme.md  0010-pam-helper-pin-transport-memfd.md  0011-mug-ir-camera-uvc-raw-ioctls.md  0011-privileged-da-lockout-reset.md  0012-mug-ir-camera-uvc-raw-ioctls.md  0013-confine-test-env-mutation.md  0014-real-brio-capture-defer-ort-matcher.md  0015-tract-onnx-face-matcher.md  0016-fail-closed-without-face-model.md  0017-face-detection-and-alignment.md  0018-face-preview-separate-crate.md  0019-mlock-secret-buffers.md  0020-passive-ir-liveness-and-multiframe-match.md  0021-srk-name-pinning.md  0022-crop-localized-liveness-warm-loop.md  0022-login-ui-pam-text-plus-unlock-dialog-extension.md  0023-crop-localized-liveness-warm-loop.md
docs/research/: gui-login-design.md  gui-login-integration.md
fuzz/: Cargo.toml  deny.toml
fuzz/corpus/fuzz_dbus_reply/: recovery-blob.json  recovery-secret-hex.txt
fuzz/corpus/fuzz_metadata/: valid-metadata.json
fuzz/fuzz_targets/: fuzz_dbus_reply.rs  fuzz_metadata.rs  fuzz_tpm_blob.rs
gnome-extension/: README.md  extension.js  metadata.json  stylesheet.css
supply-chain/: audits.toml  config.toml
testing/fprint-mock/: fprintd_mock.py
testing/swtpm/: run.sh
tools/face-collect/: Cargo.toml
tools/face-collect/src/: main.rs
tools/face-preview/: Cargo.toml
tools/face-preview/src/: main.rs
