[workspace]
resolver = "2"
members = [
    "crates/tess-core",
    "crates/tess-tpm",
    "crates/tess-keyring",
    "crates/tess-fprint",
    "crates/tess-pam",
    "crates/tess-cli",
    "crates/mug",
    "crates/tess-testenv",
]
# Dev/eval-only live face-recognition viewer. Kept OUT of the workspace on purpose: it pulls a GUI
# stack (minifb → wayland/x11) that we do not want in the workspace lockfile or the cargo-vet /
# cargo-deny supply-chain gates of this auth-critical project. It path-depends on `mug`, so it drives
# the exact shipped detect→align→embed→match pipeline.
exclude = [
    "tools/face-preview",
]

[workspace.package]
version = "0.0.0"
edition = "2024"
rust-version = "1.96"
license = "MIT"
authors = ["Adam Hassan"]
repository = "https://github.com/Adamkadaban/LinuxTPMKeyring"

[workspace.dependencies]
# Internal
tess-core = { path = "crates/tess-core" }
tess-tpm = { path = "crates/tess-tpm" }
tess-keyring = { path = "crates/tess-keyring" }
tess-fprint = { path = "crates/tess-fprint" }
mug = { path = "crates/mug" }
tess-testenv = { path = "crates/tess-testenv" }

# Errors
thiserror = "2"
anyhow = "1"

# Secret hygiene
zeroize = { version = "1.9", features = ["derive"] }
secrecy = "0.10"
getrandom = "0.4"
# Safe (no caller-side `unsafe`) page-locking so `tess-core` can `mlock` secret buffers while staying
# `#![forbid(unsafe_code)]`.
region = "3"

# Serde / config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

# Syscalls / keyctl
nix = { version = "0.31", features = ["fs", "process", "signal", "resource"] }
libc = "0.2"

# CLI
clap = { version = "4", features = ["derive"] }

# TPM (pinned ≥7.1.0 — GHSA-w3vw-ccc5-qr8v). The UAF only triggers when start_auth_session is given an
# explicit Some(nonce); our sessions pass nonce_caller=None, so keep it that way. kept on stable;
# tss-esapi 8.0.0 is an alpha pre-release.
tss-esapi = "7.7"
# Recovery-secret wrapping: derive a key-encryption key from the high-entropy recovery secret
# (HKDF-SHA256) and AEAD-seal the keyring key under it (XChaCha20-Poly1305), so the keyring is
# recoverable without the TPM yet the on-disk blob is inert without the recovery secret.
# kept on stable; chacha20poly1305 0.11 is an RC.
chacha20poly1305 = { version = "0.10", default-features = false, features = ["alloc"] }
hkdf = "0.13"
sha2 = "0.11"
# Non-echoing prompt for the current keyring password at enroll time.
rpassword = "7"
# D-Bus / Secret Service. async-io runtime on both so the blocking wrappers share one executor.
zbus = "5"
secret-service = { version = "5", default-features = false, features = [
    "rt-async-io-crypto-rust",
] }
tempfile = "3"
futures-util = "0.3"
async-io = "2"

# Optional face matcher: self-contained ONNX inference (no native ONNX Runtime). Enabled only by
# mug's `face-model` feature; no model ships with tess. tract chosen over ort (ADR-0015).
tract-onnx = "0.23.3"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
