[package]
name = "tess-cli"
description = "The tess command-line tool: enroll, recover, unenroll, status, unlock, test, doctor, install."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "tess"
path = "src/main.rs"

# Spawned by the tess PAM module under its watchdog. The module resolves the helper at runtime; its
# default install path is wired up by the deploy packaging (Phase 4).
[[bin]]
name = "tess-pam-helper"
path = "src/pam_helper.rs"

[features]
# Drives the transactional enroll integration suite against an isolated swtpm (TPM seal/unseal) and a
# throwaway gnome-keyring on a private bus (Secret Service rekey). Off by default so
# `cargo test --workspace` stays hardware-free; the enroll CI job runs
# `cargo test -p tess-cli --features sim,daemon-tests`. `daemon-tests` pulls in `secret-service` as
# the high-level client that seeds and reads back the pre-existing items the rollback tests assert
# survive.
sim = []
daemon-tests = ["dep:secret-service"]

[dependencies]
tess-core.workspace = true
tess-tpm.workspace = true
tess-keyring.workspace = true
tess-fprint.workspace = true
tss-esapi.workspace = true
clap.workspace = true
anyhow.workspace = true
thiserror.workspace = true
libc.workspace = true
zeroize.workspace = true
getrandom.workspace = true
base64.workspace = true
serde = { workspace = true }
serde_json.workspace = true
chacha20poly1305.workspace = true
hkdf.workspace = true
sha2.workspace = true
rpassword.workspace = true
secret-service = { workspace = true, optional = true }

[dev-dependencies]
tempfile.workspace = true
zbus.workspace = true

[lints]
workspace = true
