[package]
name = "tess-cli"
description = "The tess command-line tool: enroll, recover, unenroll, status, unlock, test, doctor, install."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "tess"
path = "src/main.rs"

# Spawned by the tess PAM module under its watchdog. The module resolves the helper at runtime; its
# default install path is wired up by the deploy packaging (Phase 4).
[[bin]]
name = "tess-pam-helper"
path = "src/pam_helper.rs"

[features]
# Drives the transactional enroll integration suite against an isolated swtpm (TPM seal/unseal) and a
# throwaway gnome-keyring on a private bus (Secret Service rekey). Off by default so
# `cargo test --workspace` stays hardware-free; the enroll CI job runs
# `cargo test -p tess-cli --features sim,daemon-tests`. `daemon-tests` pulls in `secret-service` as
# the high-level client that seeds and reads back the pre-existing items the rollback tests assert
# survive.
sim = []
daemon-tests = ["dep:secret-service"]
# Enables the real `tract` ONNX face matcher (`mug/face-model`). Off by default → the model-free
# mock; a user-supplied model is loaded at runtime via `MUG_MODEL_PATH`/config.
face-model = ["mug/face-model"]

[dependencies]
tess-core.workspace = true
tess-tpm.workspace = true
tess-keyring.workspace = true
tess-fprint.workspace = true
mug.workspace = true
tss-esapi.workspace = true
clap.workspace = true
anyhow.workspace = true
thiserror.workspace = true
libc.workspace = true
zeroize.workspace = true
getrandom.workspace = true
base64.workspace = true
serde = { workspace = true }
serde_json.workspace = true
chacha20poly1305.workspace = true
hkdf.workspace = true
sha2.workspace = true
rpassword.workspace = true
secret-service = { workspace = true, optional = true }

[dev-dependencies]
tempfile.workspace = true
zbus.workspace = true
nix.workspace = true
tess-testenv.workspace = true

[lints]
workspace = true

[package.metadata.deb]
name = "tess"
maintainer = "Adam Hassan"
license-file = ["../../LICENSE", "0"]
section = "admin"
priority = "optional"
extended-description = """
tess seals a high-entropy random key in the TPM 2.0, bound to a PIN authValue, and a non-blocking,
fail-open PAM module unseals it at login to unlock the GNOME login keyring with no password. Protects
the keyring at rest with hardware anti-hammering; a root/kernel adversary on a live machine is out of
scope. PAM wiring is left to the explicit `tess install` so packaging can never lock you out."""
# `$auto` resolves the dynamically linked runtime libraries (libtss2-esys, libc, ...) from the
# packaged ELF binaries. gnome-keyring is reached over the Secret Service D-Bus API, not linked, so
# it must be named explicitly. fprintd drives the optional fingerprint front gate — tess runs
# PIN-only without it — so it is a Recommends (apt installs it by default, but it is removable and
# can be skipped with `apt --no-install-recommends`), not a hard Depends.
depends = "$auto, gnome-keyring"
recommends = "fprintd"
maintainer-scripts = "../../deploy/debian/"
# `tess-pam-helper` goes to the path the PAM module resolves at runtime; `libpam_tess.so` is renamed
# to its PAM load name `pam_tess.so` under the Debian amd64 multiarch security directory. `tess
# install` still copies the module/wires PAM at deploy time; these assets make a clean install path.
# The udev rule lands under /usr/lib/udev/rules.d (vendor rules, not a conffile) so it never prompts
# on upgrade; the postinst reloads udev so it applies without a reboot.
assets = [
    ["target/release/tess", "usr/bin/", "755"],
    ["target/release/tess-pam-helper", "usr/lib/tess/tess-pam-helper", "755"],
    ["target/release/libpam_tess.so", "usr/lib/x86_64-linux-gnu/security/pam_tess.so", "644"],
    ["../../deploy/udev/70-tess-tpm.rules", "usr/lib/udev/rules.d/70-tess-tpm.rules", "644"],
]
