[package]
name = "tess-core"
description = "Shared types, metadata schema, secret hygiene, and traits for tess."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
zeroize.workspace = true
secrecy.workspace = true
region.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
