[package]
name = "tess-fprint"
description = "fprintd client over net.reactivated.Fprint (consumed unmodified) + mock harness. (skeleton)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
tess-core.workspace = true
thiserror.workspace = true
# Phase 2 adds: zbus = "5".

[lints]
workspace = true
