[package]
name = "tess-fprint"
description = "fprintd client over net.reactivated.Fprint (consumed unmodified) + mock harness."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
tess-core.workspace = true
zbus.workspace = true
futures-util.workspace = true
async-io.workspace = true

[dev-dependencies]
nix.workspace = true

[lints]
workspace = true
