[package]
name = "tess-pam"
description = "pam_tess.so: non-blocking PAM module. The only crate permitted unsafe (in ffi only)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
# PAM loads the module by file name, so the cdylib must be `libpam_tess.so` (-> `pam_tess.so`).
# The rlib lets us unit-test the safe logic.
name = "pam_tess"
crate-type = ["cdylib", "rlib"]

[dependencies]
tess-core.workspace = true
tess-tpm.workspace = true
tess-keyring.workspace = true
tess-fprint.workspace = true
libc.workspace = true
nix.workspace = true
thiserror.workspace = true

# This crate intentionally does NOT inherit the workspace `unsafe_code = "forbid"` lint. Instead
# lib.rs sets `#![deny(unsafe_code)]` and only the `ffi` module is `#[allow(unsafe_code)]`, confining
# unsafe to the FFI boundary.
[lints.clippy]
all = { level = "warn", priority = -1 }
