[package]
name = "tess-tpm"
description = "TPM2 seal/unseal of a random key under a PIN authValue, with HMAC sessions. (skeleton)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
# Exercises an actual swtpm (swtpm TCTI) in tests: opens a real ESAPI context,
# creates the ECC primary, and starts the salted HMAC session. Off by default so
# `cargo test --workspace` stays green and hardware-free on dev hosts; CI runs
# `cargo test -p tess-tpm --features sim` with swtpm installed.
sim = []
# Targets the kernel resource manager (`/dev/tpmrm0`, device TCTI) for a real /
# virtual hardware TPM. Validated on the Azure vTPM, never on the dev host.
hw = []

[dependencies]
tess-core.workspace = true
thiserror.workspace = true
tss-esapi.workspace = true
getrandom.workspace = true
zeroize.workspace = true

[lints]
workspace = true
