[package]
name = "face-preview"
version = "0.0.0"
edition = "2024"
rust-version = "1.96"
license = "MIT"
authors = ["Adam Hassan"]
repository = "https://github.com/Adamkadaban/LinuxTPMKeyring"
publish = false
description = "Dev/eval-only live IR face-recognition viewer driving the shipped mug pipeline. Not part of the tess workspace; never shipped."

# Standalone workspace root (matching the `fuzz/` crate pattern): the parent workspace excludes this
# crate, and declaring an empty `[workspace]` here makes it unambiguously its own root so
# `cargo run --manifest-path tools/face-preview/Cargo.toml` never hits a workspace-membership error.
# Resolver v2 matches the parent so dependency feature unification behaves identically.
[workspace]
resolver = "2"

[[bin]]
name = "face-preview"
path = "src/main.rs"

# Path-depends on the shipped `mug` crate (with its real ONNX matcher) so the viewer exercises the
# exact detect→align→embed→match code, not a re-implementation. Deliberately outside the workspace so
# minifb's GUI dependency stack stays out of the workspace lockfile and supply-chain gates.
[dependencies]
mug = { path = "../../crates/mug", features = ["face-model"] }
anyhow = "1"
minifb = "0.28"
font8x8 = "0.3"
